Bug 831440 - Explicitly unassign the -moz-element tab backgrounds when tabstrip is not visible. r=mbrubeck
UltraBlame original commit: 3b5d46fceb26cfe6135cc198f698d896b3c18685

--- a/browser/metro/theme/browser.css
+++ b/browser/metro/theme/browser.css
@@ -916,6 +916,29 @@ height
 thumbnail_height
 ;
 }
+#
+tray
+:
+not
+(
+[
+expanded
+]
+)
+.
+documenttab
+-
+thumbnail
+{
+background
+-
+image
+:
+none
+!
+important
+;
+}
 .
 documenttab
 -
